--- a/src/global.scss
+++ b/src/global.scss
@@ -3,58 +3,73 @@
 	color: red;
 }
 
-.container{
-    display: flex;
-    height: 800px;
-    font-size: 14px;
+.container {
+	display: flex;
+	height: 800px;
+	font-size: 14px;
 }
 
-
 .left {
+	padding-right: 20px;
 	border-right: solid 1px gray;
-    padding-right: 20px;
 }
 
 .right {
-    display: flex;
-    flex:1;
+	display: flex;
+	flex: 1;
 }
 
-.stargate{
-    width: 700px;
-    padding: 0 20px;
-    border-right: solid 1px gray;
-    overflow-x: scroll;
+.stargate {
+	width: 700px;
+	padding: 0 20px;
+	overflow-x: scroll;
+	border-right: solid 1px gray;
 }
 
-.keplr{
-    padding-left: 20px;
-    flex: 1;
-    width: 50%;
+.keplr {
+	flex: 1;
+	width: 50%;
+	padding-left: 20px;
 }
 
-label, .label{
-    display: block;
-    font-weight: 600;
-    padding: 10px 0;
-    font-size: 16px;
-    margin-top: 10px;
+label,
+.label {
+	display: block;
+	margin-top: 10px;
+	padding: 10px 0;
+	font-weight: 600;
+	font-size: 16px;
 }
 
-.weight{
-    display: flex;
-    font-weight: 600;
-    padding: 10px 0;
-    font-size: 16px;
+.weight {
+	display: flex;
+	padding: 10px 0;
+	font-weight: 600;
+	font-size: 16px;
 }
 
-.ell{
-    width :800px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+.ell {
+	width: 800px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
-.tx{
-    margin-top: 5px;
+.tx {
+	margin-top: 5px;
+}
+
+.select {
+	font-weight: 600;
+	font-size: 14px;
+	border: 0;
+	outline: none;
+}
+
+input {
+	border: 0;
+	border-bottom: solid 1px gray;
+    min-width: 200px;
+    margin-right: 10px;
+    outline: none;
 }
